# Ascend-msoptuner

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.py  dependencies.json  download_dependencies.py
docs/zh/: msoptuner_install_guide.md
docs/zh/install_guide/: msoptuner_install_guide.md
docs/zh/legal/: security_statement.md  vulnerability_handling_procedure.md
pre-commit/: pyproject.toml
test/: CMakeLists.txt  test_mstuner.py
test/catlass_test/: CMakeLists.txt
tuner/: CMakeLists.txt  README.md
tuner/dfx_kernel/: CMakeLists.txt  clear_l2_cache.cpp
tuner/include/: catlass_tuner.h  command_line_parser.h  device_memory_manager.h  gemm_op_config.h  library_helper.h  log.h  m_t_var.h  metric.h  metrics.h  op_config.h  op_launcher.h  profiler.h
tuner/src/: catlass_tuner.cpp  command_line_parser.cpp  device_memory_manager.cpp  gemm_op_config.cpp  library_helper.cpp  main.cpp  metric.cpp  metrics.cpp  op_config.cpp  op_launcher.cpp  profiler.cpp
